refactor: stabilize student entity mapsid, document openapi endpoints, clean up mappers and eliminate duplicate code